# structa

./: .gitignore  Cargo.toml  LICENSE  NPM-PUBLISH.md  README.md  dist-workspace.toml  package.json  structa-runtime-0.6.1.tgz  structa-runtime-0.6.2.tgz
.github/workflows/: publish.yml  release.yml
.husky/: pre-commit
crates/structa-ast/: Cargo.toml
crates/structa-ast/src/: lib.rs
crates/structa-cli/: Cargo.toml
crates/structa-cli/src/: config.rs  main.rs
crates/structa-cli/src/commands/: add.rs  build.rs  dev.rs  dev_server.rs  docs.rs  generate.rs  init.rs  install.rs  mod.rs  orm.rs  uninstall.rs  update.rs
crates/structa-codegen/: Cargo.toml
crates/structa-codegen/src/: lib.rs
crates/structa-compiler/: Cargo.toml
crates/structa-compiler/src/: ast.rs  compiler.rs  lexer.rs  lib.rs  parser.rs  test.rs
crates/structa-core/: Cargo.toml
crates/structa-core/src/: di.rs  errors.rs  lib.rs  lifecycle.rs  logger.rs  metadata.rs  plugins.rs  server.rs  types.rs
crates/structa-lexer/: Cargo.toml
crates/structa-lexer/src/: lib.rs
crates/structa-linker/: Cargo.toml
crates/structa-linker/src/: lib.rs  linker.rs
crates/structa-parser/: Cargo.toml
crates/structa-parser/src/: lib.rs
crates/structa-schema/: Cargo.toml
crates/structa-schema/src/: app.rs  dto.rs  entity.rs  generator.rs  lib.rs  module.rs  route.rs  service.rs
crates/structa-transformer/: Cargo.toml
crates/structa-transformer/src/: lib.rs
crates/structa-utils/: Cargo.toml
crates/structa-vm/: Cargo.toml
crates/structa-vm/src/: lib.rs  vm.rs
docs/: cli.md  dsl.md  getting-started.md  index.md
prueba/src/: user.dto.structa  user.entity.structa
runtime/: package.json  tsconfig.json
runtime/src/: app.ts  container.ts  context.ts  http-server.ts  index.ts
runtime/src/decorators/: controller.ts  dto.ts  guard.ts  injectable.ts  middleware.ts  module.ts  resolver.ts  route.ts  service.ts
test-api/: .env.example  .gitignore  README.md  package.json  structa.json  tsconfig.json
test-api/src/: app.structa  main.ts
test-api/src/controllers/: user.controller.ts
test-api/src/dtos/: user.dto.ts
test-api/src/entities/: user.entity.ts
test-api/src/modules/: app.module.ts
test-api/src/services/: user.service.ts
test-project/: package.json
test-project/src/: main.structa
