[package]
name = "structa-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
structa-core = { path = "../structa-core" }
structa-lexer = { path = "../structa-lexer" }
structa-parser = { path = "../structa-parser" }
structa-transformer = { path = "../structa-transformer" }
structa-codegen = { path = "../structa-codegen" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
