[package]
name = "structa-cli"
version = "0.2.0"
edition = "2024"
description = "Structa Framework CLI - TypeScript API framework compiler"
repository = "https://github.com/CARLOSMARES/structa"
license = "MIT"

[package.metadata.dist]
wix = ["11111111-1111-1111-1111-111111111111", "22222222-2222-2222-2222-222222222222"]
npm = true
npm-package = "@structa/cli"

[dependencies]
structa-core = { path = "../structa-core" }
structa-lexer = { path = "../structa-lexer" }
structa-parser = { path = "../structa-parser" }
structa-transformer = { path = "../structa-transformer" }
structa-codegen = { path = "../structa-codegen" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
