[package]
name = "structa-linker"
version = "0.7.0"
edition = "2021"
description = "Structa linker - Generates JavaScript from compiled modules"
authors = ["Structa Team"]

[dependencies]
structa-core = { path = "../structa-core" }
structa-compiler = { path = "../structa-compiler" }
thiserror = "1.0"
anyhow = "1.0"
